<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#434040"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloMain"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="228dp"
        android:layout_height="103dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/btn_Ingresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloMain"
        app:layout_constraintVertical_bias="0.143" />

    <Button
        android:id="@+id/btn_Registrar"
        android:layout_width="228dp"
        android:layout_height="103dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/btn_Registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ingresar"
        app:layout_constraintVertical_bias="0.48" />


</androidx.constraintlayout.widget.ConstraintLayout>